--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,6 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-sass-official": "~3.2",
-    "jquery": "~1.11",
-    "knockoutjs": "~3.2",
-    "lodash": "~2.4"
+    "bootstrap-sass-official": "*"
   }
 }
