--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,6 +55,7 @@
         "source/typescript/Knockout/Components/RoleToggle.ts",
         "source/typescript/Knockout/Components/TeammateList.ts",
         "source/typescript/Knockout/Components/TeammateName.ts",
+        "source/typescript/Knockout/Components/TeammateRow.ts",
         "source/typescript/Knockout/ForcibleComputed.ts",
         "source/typescript/Utilities/ObjectArray.ts",
         "typings/browser.d.ts"
