Continuing work on new logic.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,17 +45,20 @@
         "source/typescript/App/ME2/TeammateDeathList.ts",
         "source/typescript/App/ME2/TeammateField.ts",
         "source/typescript/App/ME2/Teammates.ts",
+        "source/typescript/App/ME2/UI.ts",
         "source/typescript/extensions.d.ts",
         "source/typescript/extensions.ts",
         "source/typescript/Knockout/Bindings/Modal.ts",
         "source/typescript/Knockout/Components/DeathRoleStatic.ts",
         "source/typescript/Knockout/Components/ObservableToggle.ts",
         "source/typescript/Knockout/Components/PickTeammate.ts",
+        "source/typescript/Knockout/Components/PriorityRank.ts",
         "source/typescript/Knockout/Components/RoleStatic.ts",
         "source/typescript/Knockout/Components/RoleToggle.ts",
         "source/typescript/Knockout/Components/TeammateList.ts",
         "source/typescript/Knockout/Components/TeammateName.ts",
         "source/typescript/Knockout/Components/TeammateRow.ts",
+        "source/typescript/Knockout/Components/YesNo.ts",
         "source/typescript/Knockout/ForcibleComputed.ts",
         "source/typescript/Utilities/ObjectArray.ts",
         "typings/browser.d.ts"
