Removed last of old logic. Some nicer styling.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,47 +20,11 @@
     "compileOnSave": false,
     "buildOnSave": false,
     "filesGlob": [
-        "source/typescript/**/*.ts",
-        "source/typescript/**/*.tsx",
+        "source/typescript/app.ts",
         "typings/browser.d.ts"
     ],
     "files": [
         "source/typescript/app.ts",
-        "source/typescript/App/Application.ts",
-        "source/typescript/App/constants.ts",
-        "source/typescript/App/ME2/Henchman.ts",
-        "source/typescript/App/ME2/Logic.ts",
-        "source/typescript/App/ME2/Normandy.ts",
-        "source/typescript/App/ME2/Serialisation.ts",
-        "source/typescript/App/ME2/Stages/Boss.ts",
-        "source/typescript/App/ME2/Stages/LongWalk.ts",
-        "source/typescript/App/ME2/Stages/Occulus.ts",
-        "source/typescript/App/ME2/Stages/Setup.ts",
-        "source/typescript/App/ME2/Stages/Stage.ts",
-        "source/typescript/App/ME2/Stages/Stager.ts",
-        "source/typescript/App/ME2/Stages/Summary.ts",
-        "source/typescript/App/ME2/Stages/Vents.ts",
-        "source/typescript/App/ME2/State.ts",
-        "source/typescript/App/ME2/Teammate.ts",
-        "source/typescript/App/ME2/TeammateDeathList.ts",
-        "source/typescript/App/ME2/TeammateField.ts",
-        "source/typescript/App/ME2/Teammates.ts",
-        "source/typescript/App/ME2/UI.ts",
-        "source/typescript/extensions.d.ts",
-        "source/typescript/extensions.ts",
-        "source/typescript/Knockout/Bindings/Modal.ts",
-        "source/typescript/Knockout/Components/DeathRoleStatic.ts",
-        "source/typescript/Knockout/Components/ObservableToggle.ts",
-        "source/typescript/Knockout/Components/PickTeammate.ts",
-        "source/typescript/Knockout/Components/PriorityRank.ts",
-        "source/typescript/Knockout/Components/RoleStatic.ts",
-        "source/typescript/Knockout/Components/RoleToggle.ts",
-        "source/typescript/Knockout/Components/TeammateList.ts",
-        "source/typescript/Knockout/Components/TeammateName.ts",
-        "source/typescript/Knockout/Components/TeammateRow.ts",
-        "source/typescript/Knockout/Components/YesNo.ts",
-        "source/typescript/Knockout/ForcibleComputed.ts",
-        "source/typescript/Utilities/ObjectArray.ts",
         "typings/browser.d.ts"
     ],
     "exclude": [],
